<resources>
    <string name="app_name">Coin Circle</string>
    <string name="logo">logo</string>
    <string name="next1">Next</string>
    <string name="create_circles_n_nmanage_money_together"><![CDATA[CREATE CIRCLES\n&\nMANAGE MONEY TOGETHER]]></string>
    <string name="coin_bg">coin_bg</string>
    <string name="logo_in_white_bg">logo in white bg</string>
    <string name="track_balances_n_nsettle_up_nall_in_one_place"><![CDATA[TRACK BALANCES\n&\nSETTLE UP,\nALL IN ONE PLACE]]></string>
    <string name="welcome_n_to_ncoin_circle">WELCOME\nTO\nCOIN CIRCLE</string>
    <string name="where_friends_and_budgets_meet">Where friends and budgets meet</string>
    <string name="get_started">GET STARTED</string>
    <string name="user_agreement_and_privacy_policy">User Agreement and Privacy Policy.</string>
    <string name="by_continuing_you_agree_to_our">By continuing, you agree to our</string>
    <string name="signup">SignUp</string>
    <string name="don_t_you_have_an_account">Don\'t you have an account?</string>
    <string name="facebook">Facebook</string>
    <string name="or_connect_with">or connect with</string>
    <string name="google">Google</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login">LOGIN</string>
    <string name="googletxt">GOOGLE</string>
    <string name="facebooktxt">Facebook</string>
    <string name="logintext">Login</string>
    <string name="do_you_have_an_account">Do you have an account?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_name">First Name</string>
    <string name="nipun">Nipun</string>
    <string name="last_name">Last Name</string>
    <string name="lakmal">Lakmal</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="_25_02_2003">25/02/2003</string>
    <string name="e_mail">E-mail</string>
    <string name="nipunlakmal884_gmail_com">nipunlakmal884@gmail.com</string>
    <string name="card_details">Card Details</string>
    <string name="account_summary">Account summary</string>
    <string name="groups_background">groups background</string>
    <string name="create_group">create group</string>
    <string name="groups">Groups</string>
    <string name="notification">notification</string>
    <string name="more">more</string>
    <string name="uni_gang">Uni gang</string>
    <string name="_4_members">4 Members</string>
    <string name="unread_groups_5">Unread groups: 5</string>
    <string name="friday_night">Friday night</string>
    <string name="_12_members">12 Members</string>
    <string name="my_transactions">My Transactions</string>
    <string name="transaction_icon">Transaction icon</string>
    <string name="total_expenses">Total Expenses</string>
    <string name="_15_660_00">15,660.00</string>
    <string name="card">card</string>
    <string name="add_card">add_card</string>
    <string name="link_another_card">Link another card</string>
    <string name="next">next</string>
    <string name="added_cards_1">Added Cards: 1</string>
    <string name="back">back</string>
    <string name="link_a_card">Link a card</string>
    <string name="account_number">Account number</string>
    <string name="enter_your_account_number">Enter your account number</string>
    <string name="bank">Bank</string>
    <string name="account_type">Account type</string>
    <string name="current">Current</string>
    <string name="savings">Savings</string>
    <string name="account_nickname">Account nickname</string>
    <string name="continue1">Continue</string>
    <string name="done_mark">done mark</string>
    <string name="card_successfully_added">Card successfully added !</string>
    <string name="back2">Back</string>
    <string name="add">add</string>
    <string name="delete_group" />
    <string name="add_member" />
    <string name="for_uni_budget">For Uni Budget</string>
    <string name="members4">4 Members</string>
    <string name="group_transactions">Group Transactions</string>
    <string name="current_balance">Current Balance</string>
    <string name="_5_660_00">5,660.00</string>
    <string name="add_transaction" />
    <string name="group_transactions2">Group Transactions</string>
    <string name="balance_of_grp">5,660.00</string>
    <string name="group_name">Group Name</string>
    <string name="add_friends">Add friends</string>
    <string name="create">Create</string>
</resources>