<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        tools:ignore="UselessParent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/coin_bg"
            app:srcCompat="@drawable/coins_bg" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="420dp"
            android:contentDescription="@string/logo_in_white_bg"
            app:srcCompat="@drawable/logo_white_bg" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="108dp"
            android:fontFamily="@font/poppins_bold"
            android:gravity="center"
            android:shadowColor="#40000000"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="2"
            android:text="@string/track_balances_n_nsettle_up_nall_in_one_place"
            android:textColor="@android:color/white"
            android:textSize="40sp"
            android:textStyle="bold" />

        <!-- Next Button -->

        <!-- Page indicator -->
        <Button
            android:id="@+id/onboarding2Btn"
            android:layout_width="240dp"
            android:layout_height="56dp"
            android:layout_gravity="bottom|center"
            android:layout_marginBottom="64dp"
            android:background="@drawable/btn_white_rounded"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/next1"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:layout_marginBottom="24dp"
            android:gravity="center"
            android:orientation="horizontal">

            <View
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_marginEnd="6dp"
                android:background="@drawable/dot_inactive" />

            <View
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_marginEnd="6dp"
                android:background="@drawable/dot_active" />

            <View
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:background="@drawable/dot_inactive" />
        </LinearLayout>
    </FrameLayout>
</LinearLayout>
